--- a/templates/capture.html
+++ b/templates/capture.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capture Image</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <main>
         <div class="container">
             <div class="image-container">
-                <img src="{{ url_for('static', filename='another_logo.png') }}" alt="">
+                <img src="{{ url_for('static', filename='sicu_aura_logo.png') }}" alt="">
                 <h3 id="caption">Feel safe everywhere</h3>
             </div>
             <div>
                 <div class="header">
-                    <br>
-                    <a href="/signup">Sign Up</a>
-                    <a href="#">Login</a>
-                </div>
+                        <img src="{{ url_for('static', filename='another_logo.png') }}" alt="">
+                        <div class="navbar">
+                            <p><a href="#">Sign Up</a> / <a href="/login"> Login</a></p>
+                        </div> 
+                    </div>
                 <div id="camera-section">
                     <video id="video" autoplay></video>
                     <button id="capture-btn">Capture Image</button>
@@ -28,22 +29,24 @@
                     <br>
                     <button id="retake-btn">Retake</button>
                     <button id="uploadImageButton">Upload</button>
-                    <form action="/img_url" method="post">
-                        <input id="image_url" name="image_url" type="text" placeholder="Enter the url of the image window opened">
-                        <button type="submit">Continue</button>
-                    </form>
+                    <br>
+                    <form action="/img_url" method="post" id="img_form">
+                        <div class="input-container">
+                            <input id="image_url" name="image_url" type="text" placeholder="Enter the url of the image window opened">
+                            <button type="submit" id="continue-btn">Continue</button>
+                        </div>
+                    </form>                    
+                    <footer>
+                        <p>© Hospital Form. All rights reserved.</p>
+                    </footer>
                 </div>
             </div>
         </div>
     </main>
 
-    <footer>
-        <p>© Hospital Form. All rights reserved.</p>
-    </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
-        let capturedImageData; // Variable to store the captured image data
+        let capturedImageData;
 
         document.getElementById('capture-btn').addEventListener('click', function() {
             var video = document.getElementById('video');
@@ -55,7 +58,6 @@
 
             context.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-            // Store the captured image data
             capturedImageData = canvas.toDataURL('image/png');
 
             var capturedImage = document.getElementById('captured-image');
@@ -72,9 +74,8 @@
         });
 
         document.getElementById('uploadImageButton').addEventListener('click', async () => {
-            if (capturedImageData) { // Check if an image is captured
+            if (capturedImageData) { 
                 try {
-                    // Convert the base64 image data to a Blob object
                     const blob = await (await fetch(capturedImageData)).blob();
                     const formData = new FormData();
                     formData.append('image', blob);
